--- a/war/build.gradle
+++ b/war/build.gradle
@@ -4,14 +4,11 @@ plugins {
 }
 
 dependencies {
+    compile 'javax.servlet:javax.servlet-api:3.1.0'
     compile 'com.sun.faces:jsf-api:2.2.9'
     compile 'com.sun.faces:jsf-impl:2.2.9'
     compile 'jstl:jstl:1.2'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'junit', name: 'junit', version: '4.12'
-}
-
-war {
-    webXml = project.file('src/main/WEB-INF/web.xml')
 }
