--- a/war/build.gradle
+++ b/war/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     compile 'com.sun.faces:jsf-api:2.2.9'
     compile 'com.sun.faces:jsf-impl:2.2.9'
     compile 'jstl:jstl:1.2'
+    compile project(':ejb')
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'junit', name: 'junit', version: '4.12'
